add post mortem report endpoint and logic
